feat: add query method for reactor client
Signed-off-by: ZhangJian He <shoothzj@gmail.com>